[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sigkan" 
version = "0.2.0" 
description = "Path Signature-Weighted Kolmogorov-Arnold Networks for Time Series"
authors = [ "Rémi Genet", "Hugo Inzirillo"]  
readme = "README.md"  
packages = [{include = "sigkan"}]  

[tool.poetry.dependencies]
python = ">=3.9,<3.13" 
numpy = "^2.0.0"
keras = "^3.0.0"
keras_sig = "^1.0.0"
keras_efficient_kan = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-xdist = "^3.3.0"
tensorflow = "^2.15.0"
torch = "^2.0.0"
jax = "^0.4.13"
jaxlib = "^0.4.13"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
filterwarnings = [
    "ignore:Can't initialize NVML:UserWarning",
    "ignore:jax.xla_computation is deprecated:DeprecationWarning",
    "ignore::DeprecationWarning:jax._src.dtypes",
    "ignore:Type google._upb._message.MessageMapContainer uses PyType_Spec with a metaclass that has custom tp_new:DeprecationWarning:importlib",
    "ignore:Type google._upb._message.ScalarMapContainer uses PyType_Spec with a metaclass that has custom tp_new:DeprecationWarning:importlib",
    "ignore:Graph break for an optree C/C\\+\\+ function optree\\._C\\.PyCapsule\\.flatten:UserWarning",
    "ignore:Graph break for an optree C/C\\+\\+ function optree\\._C\\.PyCapsule\\.is_leaf:UserWarning",
    "ignore:Graph break for an optree C/C\\+\\+ function optree\\._C\\.PyCapsule\\.is_namedtuple:UserWarning",
    "ignore:Pickle, copy, and deepcopy support will be removed from itertools:DeprecationWarning"
]